--- a/app/src/main/res/layout/layout_city_select.xml
+++ b/app/src/main/res/layout/layout_city_select.xml
@@ -12,7 +12,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="所在地区"
+            android:text="选择省市区"
             android:layout_centerInParent="true"
             android:textColor="@color/text_color"
             android:textSize="@dimen/text_14px"/>
