--- a/app/src/main/res/layout/layout_city_select.xml
+++ b/app/src/main/res/layout/layout_city_select.xml
@@ -45,7 +45,7 @@
             android:gravity="center"
             android:clickable="true"
             android:text="请选择"
-            android:visibility="invisible"/>
+            android:visibility="gone" />
     </LinearLayout>
     <View
         android:id="@+id/indicator"
