--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -567,7 +567,6 @@
                 android:id="@+id/rt_editpaw"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_50px"
-                android:layout_marginBottom="@dimen/dimen_16px"
                 android:background="@drawable/selector_onclick">
 
                 <TextView
@@ -578,6 +577,65 @@
                     android:drawableLeft="@mipmap/mind_password"
                     android:drawablePadding="@dimen/text_10px"
                     android:text="修改密码"
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/text_14px" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/dimen_16px"
+                    android:background="@mipmap/my_arrow" />
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_0.5px"
+                android:background="@color/view_line" />
+            <RelativeLayout
+                android:id="@+id/rt_problem"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_50px"
+                android:background="@drawable/selector_onclick">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/dimen_16px"
+                    android:drawableLeft="@mipmap/mind_password"
+                    android:drawablePadding="@dimen/text_10px"
+                    android:text="常见问题"
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/text_14px" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/dimen_16px"
+                    android:background="@mipmap/my_arrow" />
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_0.5px"
+                android:background="@color/view_line" />
+            <RelativeLayout
+                android:id="@+id/rt_version_update"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_50px"
+                android:layout_marginBottom="@dimen/dimen_16px"
+                android:background="@drawable/selector_onclick">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/dimen_16px"
+                    android:drawableLeft="@mipmap/mind_password"
+                    android:drawablePadding="@dimen/text_10px"
+                    android:text="版本更新"
                     android:textColor="@color/text_color"
                     android:textSize="@dimen/text_14px" />
 
