--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -527,7 +527,35 @@
                     android:layout_marginRight="@dimen/dimen_16px"
                     android:background="@mipmap/my_arrow" />
             </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_0.5px"
+                android:background="@color/view_line" />
+            <RelativeLayout
+                android:id="@+id/rt_problem"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_50px"
+                android:background="@drawable/selector_onclick">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/dimen_16px"
+                    android:drawableLeft="@mipmap/mind_common_problem"
+                    android:drawablePadding="@dimen/text_10px"
+                    android:text="常见问题"
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/text_14px" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/dimen_16px"
+                    android:background="@mipmap/my_arrow" />
+            </RelativeLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_0.5px"
@@ -588,35 +616,7 @@
                     android:layout_marginRight="@dimen/dimen_16px"
                     android:background="@mipmap/my_arrow" />
             </RelativeLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_0.5px"
-                android:background="@color/view_line" />
-            <RelativeLayout
-                android:id="@+id/rt_problem"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_50px"
-                android:background="@drawable/selector_onclick">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/dimen_16px"
-                    android:drawableLeft="@mipmap/mind_password"
-                    android:drawablePadding="@dimen/text_10px"
-                    android:text="常见问题"
-                    android:textColor="@color/text_color"
-                    android:textSize="@dimen/text_14px" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="@dimen/dimen_16px"
-                    android:background="@mipmap/my_arrow" />
-            </RelativeLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_0.5px"
@@ -633,7 +633,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/dimen_16px"
-                    android:drawableLeft="@mipmap/mind_password"
+                    android:drawableLeft="@mipmap/mind_update"
                     android:drawablePadding="@dimen/text_10px"
                     android:text="版本更新"
                     android:textColor="@color/text_color"
