--- a/app/src/main/res/layout/include_main_toolbar.xml
+++ b/app/src/main/res/layout/include_main_toolbar.xml
@@ -3,8 +3,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dimen_48px"
-    android:background="@color/white"
-    >
+    android:background="@color/white">
 
 
     <ImageView
@@ -16,16 +15,16 @@
         android:paddingLeft="@dimen/dimen_20px"
         android:paddingRight="@dimen/dimen_20px"
         android:src="@mipmap/arrow"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <LinearLayout
         android:id="@+id/ll_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/text_16px"
-        android:orientation="horizontal"
+        android:layout_marginLeft="@dimen/dimen_16px"
         android:gravity="center"
+        android:orientation="horizontal"
         android:visibility="gone">
 
         <ImageView
@@ -33,19 +32,20 @@
             android:layout_height="@dimen/dimen_24px"
             android:layout_centerVertical="true"
             android:background="@mipmap/location"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop" />
+
         <TextView
             android:id="@+id/tv_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/dimen_10px"
             android:drawableRight="@mipmap/down"
             android:drawablePadding="8dp"
-            android:layout_marginLeft="@dimen/dimen_10px"
             android:text="南宁市"
-            android:textSize="@dimen/text_14px"
             android:textColor="@color/text_color"
-            android:visibility="visible"/>
+            android:textSize="@dimen/text_14px"
+            android:visibility="visible" />
     </LinearLayout>
 
     <TextView
@@ -53,15 +53,33 @@
         style="@style/WrapWrap"
         android:layout_centerInParent="true"
         android:layout_gravity="center"
-        android:singleLine="true"
         android:ellipsize="end"
         android:maxEms="8"
+        android:singleLine="true"
         android:textColor="@color/text_color"
         android:textSize="@dimen/text_18px" />
 
-    <ImageView
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@mipmap/home_notice"
-        android:visibility="gone"/>
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="@dimen/dimen_10px">
+
+        <ImageView
+            android:id="@+id/image_news"
+            android:layout_width="@dimen/dimen_20px"
+            android:layout_height="@dimen/dimen_20px"
+            android:background="@mipmap/home_news"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/image_red_dot"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="-10dp"
+            android:layout_toRightOf="@+id/image_news"
+            android:background="@drawable/red_dot"
+            android:visibility="invisible" />
+    </RelativeLayout>
 </RelativeLayout>
